feat: Bussines model and controller for books
