# src/routes/books.routes.js
@@ -1,0 +1,17 @@
+const express = require("express");
+const router = express.Router();
+const {
+  getAllBooks,
+  getBookById,
+  createBook,
+  updateBook,
+  deleteBook,
+} = require("../controllers/book-controllers");
+
+router.get("/", getAllBooks);
+router.get("/:id", getBookById);
+router.post("/", createBook);
+router.put("/:id", updateBook);
+router.delete("/:id", deleteBook);
+
+module.exports = router;
